[package]
name = "hello-world"
version = "0.1.0"
authors = ["ttang <chuantang.gu@17zuoye.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.11.0"
async-std = { version = "1.6.2", features = ["attributes"] }
